--- a/contact.html
+++ b/contact.html
@@ -218,10 +218,9 @@
         <div class="row">
           <div
             class="col-sm-4"
-            style="text-align: left; margin-top: 50px; padding: 5px"
+            style="text-align: left; margin-top: auto; margin-bottom: auto"
           >
             <h2>DapurLezat</h2>
-            <p></p>
           </div>
           <div class="col-sm-4">
             <h2>Contact</h2>
@@ -264,7 +263,6 @@
         </div>
       </div>
     </footer>
-
     <!-- Footer End -->
 
     <script
