--- a/index.html
+++ b/index.html
@@ -220,11 +220,11 @@
             <table class="table">
               <tbody>
                 <tr>
-                  <td>Salad Buah</td>
+                  <td>Salad Buah Yoghurt</td>
                   <td>Rp. 25.000</td>
                 </tr>
                 <tr>
-                  <td>Pumpkin Soup</td>
+                  <td>Sup Labu Kuning</td>
                   <td>Rp. 25.000</td>
                 </tr>
                 <tr>
@@ -232,7 +232,7 @@
                   <td>Rp. 25.000</td>
                 </tr>
                 <tr>
-                  <td>Salad Buah</td>
+                  <td>Salad Sayur</td>
                   <td>Rp. 25.000</td>
                 </tr>
               </tbody>
@@ -248,19 +248,19 @@
             <table class="table">
               <tbody>
                 <tr>
-                  <td>Salad Buah</td>
+                  <td>Bratwurst Cream Pesto</td>
                   <td>Rp. 25.000</td>
                 </tr>
                 <tr>
-                  <td>Pumpkin Soup</td>
+                  <td>Chicken Maryland</td>
                   <td>Rp. 25.000</td>
                 </tr>
                 <tr>
-                  <td>Aspic Jelly</td>
+                  <td>AChicken Parmigiana</td>
                   <td>Rp. 25.000</td>
                 </tr>
                 <tr>
-                  <td>Salad Buah</td>
+                  <td>Creamy Samyang Carbonara</td>
                   <td>Rp. 25.000</td>
                 </tr>
               </tbody>
@@ -282,19 +282,19 @@
             <table class="table">
               <tbody>
                 <tr>
-                  <td>Desert Strawberry</td>
+                  <td>American Pie</td>
                   <td>Rp. 27.000</td>
                 </tr>
                 <tr>
-                  <td>Belgium Milk Choco</td>
+                  <td>Baklava Turki</td>
                   <td>Rp. 55.000</td>
                 </tr>
                 <tr>
-                  <td>Aspic Jelly</td>
+                  <td>Banoffe</td>
                   <td>Rp. 25.000</td>
                 </tr>
                 <tr>
-                  <td>Salad Buah</td>
+                  <td>Dadar Gulung</td>
                   <td>Rp. 25.000</td>
                 </tr>
               </tbody>
