--- a/about.html
+++ b/about.html
@@ -151,7 +151,7 @@
         <div class="row">
           <div
             class="col-sm-4"
-            style="text-align: left; margin-top: 50px; padding: 5px"
+            style="text-align: left; margin-top: auto; margin-bottom: auto"
           >
             <h2>DapurLezat</h2>
           </div>
