--- a/starters.html
+++ b/starters.html
@@ -72,19 +72,7 @@
     </nav>
     <!-- Navbar End-->
 
-    <!-- Jumbotron Start-->
-    <section class="jumbotron">
-      <div class="container">
-        <div class="title">
-          <h1>
-            View Our <br />
-            New Menu
-          </h1>
-          <p>The freshest ingredients for you every day</p>
-        </div>
-      </div>
-    </section>
-    <!-- Jumbotron End-->
+   
 
     <!-- Menu Start-->
 
@@ -94,7 +82,8 @@
         <nav aria-label="breadcrumb ">
           <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Menu</li>
+            <li class="breadcrumb-item"><a href="menu.html">Menu</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Starters</li>
           </ol>
         </nav>
         <!-- breadcrumb end -->
@@ -116,7 +105,6 @@
                 <p class="card-text">
                 Rp. 25.000,00
                 </p>
-              
               </div>
             </div>
           </div>
@@ -128,7 +116,6 @@
                 <p class="card-text">
                 Rp. 25.000,00
                 </p>
-              
               </div>
             </div>
           </div>
@@ -154,83 +141,11 @@
               </div>
             </div>
           </div>
-        <div class="menu-btn">
-          <a href="starters.html" class="btn btn-menu">Selengkapnya</a>
-        </div>
-        </div>
-
-        <!-- Main Course -->
-        <div class="row">
-          <div class="tittle">
-            <h1>Main Courses</h1>
-            <p>
-              This is a section of your menu. Give your section a brief
-              description
-            </p>
-          </div>
           <div class="col-md-3">
             <div class="card" style="width: 100%">
-              <img src="asset/img/main_course/BratwurstCreamPesto.jpg" class="card-img-top" alt="..." />
+              <img src="asset/img/starters/Canapes.jpg" class="card-img-top" alt="..." />
               <div class="card-body">
-                <h5 class="card-title">Bratwurst Cream Pesto</h5>
-                <p class="card-text">
-                  Rp. 25.000,00
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="card" style="width: 100%">
-              <img src="asset/img/main_course/Chicken-Maryland.jpg" class="card-img-top" alt="..." />
-              <div class="card-body">
-                <h5 class="card-title">Chicken Maryland</h5>
-                <p class="card-text">
-                  Rp. 25.000,00
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="card" style="width: 100%">
-              <img src="asset/img/main_course/ChickenParmigiana.jpg" class="card-img-top" alt="..." />
-              <div class="card-body">
-                <h5 class="card-title">Chicken Parmigiana</h5>
-                <p class="card-text">
-                  Rp. 25.000,00
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="card" style="width: 100%; ">
-              <img src="asset/img/main_course/CreamySamyangCarbonara.jpg" style="max-height: 300px" class="card-img-top" alt="..." />
-              <div class="card-body">
-                <h5 class="card-title">Creamy Samyang Carbonara</h5>
-                <p class="card-text">
-                  Rp. 25.000,00
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="menu-btn">
-            <a href="main_course.html" class="btn btn-menu">Selengkapnya</a>
-          </div>
-        </div>
-
-        <!-- Deserts -->
-        <div class="row " >
-          <div class="tittle">
-            <h1>Deserts</h1>
-            <p>
-              This is a section of your menu. Give your section a brief
-              description
-            </p>
-          </div>
-          <div class="col-md-3">
-            <div class="card" style="width: 100%">
-              <img src="asset/img/deserts/american-pie.jpg" class="card-img-top" alt="..." />
-              <div class="card-body">
-                <h5 class="card-title">American Pie</h5>
+                <h5 class="card-title">Capanes</h5>
                 <p class="card-text">
                 Rp. 25.000,00
                 </p>
@@ -239,9 +154,9 @@
           </div>
           <div class="col-md-3">
             <div class="card" style="width: 100%">
-              <img src="asset/img/deserts/baklava-turki.jpg" class="card-img-top" alt="..." />
+              <img src="asset/img/starters/risoles.jpg" class="card-img-top" alt="..." />
               <div class="card-body">
-                <h5 class="card-title">Baklava Turki</h5>
+                <h5 class="card-title">Risoles</h5>
                 <p class="card-text">
                 Rp. 25.000,00
                 </p>
@@ -250,9 +165,9 @@
           </div>
           <div class="col-md-3">
             <div class="card" style="width: 100%">
-              <img src="asset/img/deserts/Banoffee.jpg" class="card-img-top" alt="..." />
+              <img src="asset/img/starters/salad-buah-yoghurt.jpg" class="card-img-top" alt="..." />
               <div class="card-body">
-                <h5 class="card-title">Banoffee</h5>
+                <h5 class="card-title">salad Buah Yoghurt</h5>
                 <p class="card-text">
                 Rp. 25.000,00
                 </p>
@@ -261,34 +176,9 @@
           </div>
           <div class="col-md-3">
             <div class="card" style="width: 100%">
-              <img src="asset/img/deserts/dadar-gulung.jpg" class="card-img-top" alt="..." />
+              <img src="asset/img/starters/salad-sayur.jpg" class="card-img-top" alt="..." />
               <div class="card-body">
-                <h5 class="card-title">Dadar Gulung</h5>
-                <p class="card-text">
-                Rp. 25.000,00
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="menu-btn">
-            <a href="desert.html" class="btn btn-menu">Selengkapnya</a>
-          </div>
-        </div>
-
-        <!-- Drinks-->
-        <div class="row">
-          <div class="tittle">
-            <h1>Drinks</h1>
-            <p>
-              This is a section of your menu. Give your section a brief
-              description
-            </p>
-          </div>
-          <div class="col-md-3">
-            <div class="card" style="width: 100%">
-              <img src="asset/img/drinks/blackforest-martinin.jpg" class="card-img-top" alt="..." />
-              <div class="card-body">
-                <h5 class="card-title">Blackforest Martini</h5>
+                <h5 class="card-title">Salad Sayur</h5>
                 <p class="card-text">
                 Rp. 25.000,00
                 </p>
@@ -297,9 +187,9 @@
           </div>
           <div class="col-md-3">
             <div class="card" style="width: 100%">
-              <img src="asset/img/drinks/creamy-espresso-martini.jpg" class="card-img-top" alt="..." />
+              <img src="asset/img/starters/sup-labu-kuning.jpg" class="card-img-top" alt="..." />
               <div class="card-body">
-                <h5 class="card-title">Creamy Espresso Martini</h5>
+                <h5 class="card-title">Sup Labu Kuning</h5>
                 <p class="card-text">
                 Rp. 25.000,00
                 </p>
@@ -308,28 +198,14 @@
           </div>
           <div class="col-md-3">
             <div class="card" style="width: 100%">
-              <img src="asset/img/drinks/matcha.jpg" class="card-img-top" alt="..." />
+              <img src="asset/img/starters/toppoki.jpg" class="card-img-top" alt="..." />
               <div class="card-body">
-                <h5 class="card-title">Matcha</h5>
+                <h5 class="card-title">Topokki</h5>
                 <p class="card-text">
                 Rp. 25.000,00
                 </p>
               </div>
             </div>
-          </div>
-          <div class="col-md-3">
-            <div class="card" style="width: 100%">
-              <img src="asset/img/drinks/Mocha.jpg" class="card-img-top" alt="..." />
-              <div class="card-body">
-                <h5 class="card-title">Mocha</h5>
-                <p class="card-text">
-                Rp. 25.000,00
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="menu-btn">
-            <a href="drinks.html" class="btn btn-menu">Selengkapnya</a>
           </div>
         </div>
       </div>
@@ -339,55 +215,55 @@
 
     <!-- Footer Start -->
     <footer class="footer">
-      <div class="container">
-        <div class="row">
-          <div
-            class="col-sm-4"
-            style="text-align: left; margin-top: auto; margin-bottom: auto"
-          >
-            <h2>DapurLezat</h2>
-          </div>
-          <div class="col-sm-4">
-            <h2>Contact</h2>
-            <p>
-              +1+86 852 346 000 <br />
-              info@dapurlezat.com
-            </p>
-            <p>
-              1959 Sepulveda Blvd. <br />
-              Culver City, CA, 90230
-            </p>
-          </div>
-          <div class="col-sm-4 subs">
-            <h2>Never Miss a Recipe</h2>
-            <form action="">
-              <input
-                type="text"
-                id="email"
-                name="email"
-                placeholder="email adress"
-              />
-              <button class="btn btn-subs">Subscribe</button>
-            </form>
-            <p>Join our subscribers and get best recipe delivered each week!</p>
-          </div>
-        </div>
-      </div>
-      <hr />
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-6 credit">
-            <p>© 2023 DapurLezat Inc. All rights Reserved</p>
-          </div>
-          <div class="col-sm-6 social">
-            <a href=""><i class="bi bi-instagram"></i></a>
-            <a href=""><i class="bi bi-twitter"></i></a>
-            <a href=""><i class="bi bi-youtube"></i></a>
-            <a href=""><i class="bi bi-facebook"></i></a>
+        <div class="container">
+          <div class="row">
+            <div
+              class="col-sm-4"
+              style="text-align: left; margin-top: auto; margin-bottom: auto"
+            >
+              <h2>DapurLezat</h2>
+            </div>
+            <div class="col-sm-4">
+              <h2>Contact</h2>
+              <p>
+                +1+86 852 346 000 <br />
+                info@dapurlezat.com
+              </p>
+              <p>
+                1959 Sepulveda Blvd. <br />
+                Culver City, CA, 90230
+              </p>
+            </div>
+            <div class="col-sm-4 subs">
+              <h2>Never Miss a Recipe</h2>
+              <form action="">
+                <input
+                  type="text"
+                  id="email"
+                  name="email"
+                  placeholder="email adress"
+                />
+                <button class="btn btn-subs">Subscribe</button>
+              </form>
+              <p>Join our subscribers and get best recipe delivered each week!</p>
+            </div>
           </div>
         </div>
-      </div>
-    </footer>
+        <hr />
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-6 credit">
+              <p>© 2023 DapurLezat Inc. All rights Reserved</p>
+            </div>
+            <div class="col-sm-6 social">
+              <a href=""><i class="bi bi-instagram"></i></a>
+              <a href=""><i class="bi bi-twitter"></i></a>
+              <a href=""><i class="bi bi-youtube"></i></a>
+              <a href=""><i class="bi bi-facebook"></i></a>
+            </div>
+          </div>
+        </div>
+      </footer>
     <!-- Footer End -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
